# zzz-backend

./: disk-sets-english.json  pyproject.toml  sample.json  zzz-backend.db
app/: app.py  db.py  models.py  schemas.py  seed.py  seed_db.py
app/data/: drive_discs.json  weapons.json
app/models/: weapon.py
scrape/: drive_discs.json  get_all_wengines.py  get_alll_wengines.py  get_characters  get_drivedisc.py  weapons.json
sql/: app.py  db.py  schemas.py  seed_db.py
