[project]
name = "zzz-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiosqlite>=0.22.0",
    "fastapi>=0.125.0",
    "fastapi-users[sqlalchemy]>=14.0.2",
    "python-env>=1.0.0",
    "uvicorn[standard]>=0.38.0",
]
